Used flex for layout instead of relative positioning

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
 </head>
 <body>
-
   <div class="container">
     <section>
       <div class="flexbox"><img src="images/illustration-hero.svg" alt="" srcset=""></div>
-      <div>
+      <div class="flexbox">
         <h1>Order Summary</h1>
       </div>
       <div class="flexbox">
@@ -24,11 +23,11 @@
           device anywhere you like!
         </p>
       </div>
-      <div class="plans">
+      <div class="plans flexbox">
         <div><img src="images/icon-music.svg" alt="icon-music"></div>
         <div>
           <b>Annual Plan</b>
-          <br>$59.99/year
+          <p>$59.99/year</p>
         </div>
         <div><a href="#">Change</a></div>
       </div>
@@ -41,5 +40,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/elams18" target="_blank">Elamathi S</a>.
   </div>
+
 </body>
 </html>
