--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
         <div><a href="#">Change</a></div>
       </div>
       <div class="flexbox"><button class="pay">Proceed to Payment</button></div>
-      <div class="flexbox"><a href="#" class="cancel">Cancel Order</a></div>
+      <div class="flexbox cancel-container"><a href="#" class="cancel">Cancel Order</a></div>
     </section>
   </div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/elams18" target="_blank">Elamathi S</a>.
+    <div class="text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/elams18" target="_blank">Elamathi S</a>.</div>
   </div>
 
 </body>
