--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
       <div class="flexbox"><img src="images/illustration-hero.svg" alt="" srcset=""></div>
       <div class="flexbox">
-        <h1>Order Summary</h1>
+        <h1 class="main-heading">Order Summary</h1>
       </div>
       <div class="flexbox">
         <p>
