remove srcset from image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <section>
-      <div class="flexbox"><img src="images/illustration-hero.svg" alt="" srcset=""></div>
+      <div class="flexbox"><img src="images/illustration-hero.svg" alt="illustration-hero"></div>
       <div class="flexbox">
         <h1 class="main-heading">Order Summary</h1>
       </div>
