--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Frontend Mentor | Order summary card</title>
 
 </head>
-<body>
+<body role="main">
   <div class="container">
     <section>
       <div class="flexbox"><img src="images/illustration-hero.svg" alt="illustration-hero"></div>
