added some missed colors

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">  
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Order summary card</title>
 
 </head>
+
 <body role="main">
   <div class="container">
     <section>
@@ -29,16 +32,18 @@
           <b>Annual Plan</b>
           <p>$59.99/year</p>
         </div>
-        <div><a href="#">Change</a></div>
+        <div><a class="change" href="#">Change</a></div>
       </div>
       <div class="flexbox"><button class="pay">Proceed to Payment</button></div>
       <div class="flexbox cancel-container"><a href="#" class="cancel">Cancel Order</a></div>
     </section>
   </div>
-  
+
   <div class="attribution">
-    <div class="text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/elams18" target="_blank">Elamathi S</a>.</div>
+    <div class="text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
+        Mentor</a>. Coded by <a href="https://github.com/elams18" target="_blank">Elamathi S</a>.</div>
   </div>
 
 </body>
+
 </html>
